--- a/app/src/main/res/layout/custome_addmore_product.xml
+++ b/app/src/main/res/layout/custome_addmore_product.xml
@@ -20,8 +20,7 @@
         android:orientation="vertical"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:animateLayoutChanges="true">
+        android:layout_marginTop="10dp">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -32,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:animateLayoutChanges="true"
+
                 android:background="@drawable/order_backround"
                 android:layout_marginTop="10dp">
 
