--- a/app/src/main/res/anim/rotate.xml
+++ b/app/src/main/res/anim/rotate.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <rotate
-        android:duration="500"
-        android:fromDegrees="0"
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <rotate android:fromDegrees="0"
+        android:toDegrees="360"
         android:pivotX="50%"
         android:pivotY="50%"
+        android:duration="800"
+        android:repeatMode="restart"
         android:repeatCount="infinite"
-        android:startOffset="0"
-        android:toDegrees="180" />
+        android:interpolator="@android:anim/cycle_interpolator"/>
+
 </set>
