--- a/app/src/main/res/layout/activity_order_taking.xml
+++ b/app/src/main/res/layout/activity_order_taking.xml
@@ -35,7 +35,7 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                android:text="Ordre Detail" />
+                android:text="Order Detail" />
 
             <TextView
                 android:id="@+id/tv_confirm"
@@ -108,6 +108,12 @@
                 android:textColorHint="@color/light_grey_t"
                 android:background="@null"/>
 
+                <TextView
+                    android:id="@+id/tv_each_item_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+
             </RelativeLayout>
 
             <RelativeLayout
@@ -125,7 +131,7 @@
             <TextView
                 android:id="@+id/et_quantitiy"
                 android:layout_toRightOf="@id/tv_quantitiy"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:paddingLeft="8dp"
                 android:textColor="@color/white"
