--- a/app/src/main/res/layout/activity_single_item_detail_for_cabs.xml
+++ b/app/src/main/res/layout/activity_single_item_detail_for_cabs.xml
@@ -28,8 +28,7 @@
                         android:layout_centerInParent="true"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:layout_marginLeft="10dp"
-                        android:background="@drawable/circle">
+                        android:layout_marginLeft="10dp">
 
                         <com.shoaibnwar.iwsm.Utils.CircleImageView
                             android:id="@+id/iv_person2"
@@ -37,6 +36,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@drawable/person_icon"/>
+
                     </RelativeLayout>
                     <ImageView
                         android:id="@+id/iv_back_arrow"
@@ -142,7 +142,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
                         android:background="@color/black"
-                        android:layout_marginTop="10dp"/>
+                        android:layout_marginTop="10dp"
+                        android:visibility="gone"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -151,7 +152,8 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
                         android:layout_gravity="center"
-                        android:layout_marginRight="10dp">
+                        android:layout_marginRight="10dp"
+                        android:visibility="gone">
 
                        <TextView
                            android:id="@+id/tv_assignment_detail"
@@ -201,6 +203,7 @@
                         android:layout_marginTop="10dp"/>
 
                     <LinearLayout
+                        android:id="@+id/ll_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
@@ -218,7 +221,12 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_weight="1">
 
                             <TextView
                                 android:id="@+id/tv_address_line_1"
@@ -246,6 +254,18 @@
                                 android:textColor="@color/black"
                                 android:layout_marginTop="2dp"/>
 
+                        </LinearLayout>
+                            <TextView
+                                android:id="@+id/tv_assign_now"
+                                android:layout_weight="3"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:text="Assign Now"
+                                android:layout_gravity="center_vertical"
+                                android:textColor="@color/black"
+                                android:textStyle="bold"
+                                android:gravity="center_vertical"
+                                android:layout_marginLeft="5dp"/>
                         </LinearLayout>
 
                     </LinearLayout>
