--- a/app/src/main/res/layout/activity_start_trip_maps.xml
+++ b/app/src/main/res/layout/activity_start_trip_maps.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <ImageView
+        android:id="@+id/iv_back_arrow"
+        android:layout_width="25dp"
+        android:layout_height="15dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="15dp"
+        android:scaleType="fitXY"
+        android:tint="@color/white"
+        android:src="@drawable/arrow_back"/>
+
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
