--- a/app/src/main/res/layout/activity_order_taking.xml
+++ b/app/src/main/res/layout/activity_order_taking.xml
@@ -86,12 +86,24 @@
             android:id="@+id/ll_item_views"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:background="@drawable/order_backround"
             android:animateLayoutChanges="true">
 
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:src="@drawable/baskect_icon"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -172,7 +184,7 @@
             <EditText
                 android:id="@+id/et_item_detail"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="45dp"
                 android:hint="Item Detail"
                 android:paddingLeft="8dp"
                 android:gravity="top"
@@ -215,7 +227,7 @@
                </LinearLayout>
 
             </RelativeLayout>
-
+            </LinearLayout>
         </LinearLayout>
         </FrameLayout>
         </LinearLayout>
@@ -238,5 +250,8 @@
         android:layout_marginBottom="15dp"
         android:tint="@color/black"/>
 </RelativeLayout>
+
+
+
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
