--- a/app/src/main/res/layout/custome_addmore_product.xml
+++ b/app/src/main/res/layout/custome_addmore_product.xml
@@ -4,13 +4,21 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+   <TextView
+       android:id="@+id/tv_line"
+       android:layout_width="match_parent"
+       android:layout_height="1dp"
+       android:background="@color/black"
+       android:layout_gravity="right"
+       android:layout_marginTop="5dp"/>
+
     <ImageView
         android:id="@+id/iv_cross_item_view"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_gravity="right"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         app:srcCompat="@android:drawable/ic_delete" />
 
     <LinearLayout
@@ -29,16 +37,24 @@
             <LinearLayout
                 android:id="@+id/ll_item_views"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-
-                android:background="@drawable/order_backround"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_marginTop="10dp">
-
                 <RelativeLayout
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:background="@color/white">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="20dp"
+                        android:src="@drawable/baskect_icon"/>
+                </RelativeLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edit_text_background">
+                    android:orientation="vertical">
 
                     <AutoCompleteTextView
                         android:id="@+id/et_item_name"
@@ -47,117 +63,168 @@
                         android:hint="Item Name"
                         android:inputType="text"
                         android:paddingLeft="8dp"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:textColorHint="@color/light_grey_t"
                         android:background="@null"/>
 
-                    <TextView
-                        android:id="@+id/tv_each_item_price"
-                        android:layout_width="wrap_content"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"/>
+                        android:layout_marginLeft="8dp">
+                        <TextView
+                            android:id="@+id/item_code_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Item Code:"
+                            android:textColor="@color/color_text_hint"/>
 
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/tv_item_code"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="El201"
+                            android:layout_toRightOf="@+id/item_code_text"
+                            android:layout_marginLeft="4dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/color_text_hint"/>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/edit_text_background">
-                    <TextView
-                        android:id="@+id/tv_quantitiy"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Quantity: "
-                        android:paddingLeft="8dp"
-                        android:textColor="@color/white"/>
-                    <TextView
-                        android:id="@+id/et_quantitiy"
-                        android:layout_toRightOf="@id/tv_quantitiy"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="8dp"
-                        android:textColor="@color/white"
-                        android:text="0" />
+                    </RelativeLayout>
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp"
-                        android:orientation="horizontal">
+                        android:layout_marginLeft="8dp">
+                        <TextView
+                            android:id="@+id/unit_price_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Unit Price:"
+                            android:textColor="@color/color_text_hint"/>
+                        <TextView
+                            android:id="@+id/tv_price_rs1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rs."
+                            android:textStyle="bold"
+                            android:layout_toRightOf="@+id/unit_price_text"
+                            android:layout_marginLeft="4dp"
+                            android:textColor="@color/color_text_hint"/>
+
+                        <TextView
+                            android:id="@+id/tv_each_item_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            android:textStyle="bold"
+                            android:layout_toRightOf="@+id/tv_price_rs1"
+                            android:layout_marginLeft="4dp"
+                            android:textColor="@color/color_text_hint"/>
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp">
+                        <TextView
+                            android:id="@+id/item_discount_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Item Discounts:"
+                            android:textColor="@color/color_text_hint"/>
+
+                        <TextView
+                            android:id="@+id/tv_item_discount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0%"
+                            android:textStyle="bold"
+                            android:layout_toRightOf="@+id/item_discount_text"
+                            android:layout_marginLeft="4dp"
+                            android:textColor="@color/color_text_hint"/>
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp">
+                        <TextView
+                            android:id="@+id/total_price_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Total Price After Discount:"
+                            android:textColor="@color/color_text_hint"/>
+
+                        <TextView
+                            android:id="@+id/tv_price_rs"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rs."
+                            android:textStyle="bold"
+                            android:layout_toRightOf="@+id/total_price_text"
+                            android:layout_marginLeft="4dp"
+                            android:textColor="@color/color_text_hint"/>
+
+                        <TextView
+                            android:id="@+id/tv_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            android:textStyle="bold"
+                            android:layout_toRightOf="@+id/tv_price_rs"
+                            android:layout_marginLeft="4dp"
+                            android:textColor="@color/color_text_hint"/>
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="10dp">
 
                         <ImageView
                             android:id="@+id/iv_item_quantity_less"
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:src="@drawable/remove_item"
-                            android:tint="@color/white"
-                            android:layout_marginRight="20dp"/>
+                            android:tint="@color/colorPink"
+                            android:layout_marginLeft="10dp"
+
+                            android:layout_centerVertical="true"/>
+
+                        <RelativeLayout
+                            android:id="@+id/ll_et_quantitiy"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:layout_centerInParent="true"
+                            android:background="@drawable/edit_text_background">
+
+                            <TextView
+                                android:id="@+id/et_quantitiy"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:textColor="@color/black"
+                                android:text="0"/>
+
+                        </RelativeLayout>
 
                         <ImageView
                             android:id="@+id/iv_item_quantity_more"
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:src="@drawable/add_more"
-                            android:tint="@color/white" />
+                            android:tint="@color/colorPink"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="10dp"
+                            android:layout_alignParentRight="true"/>
 
-                    </LinearLayout>
-
-                </RelativeLayout>
+                    </RelativeLayout>
 
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/edit_text_background">
-                    <EditText
-                        android:id="@+id/et_item_detail"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:hint="Item Detail"
-                        android:paddingLeft="8dp"
-                        android:gravity="top"
-                        android:inputType="text"
-                        android:textColor="@color/white"
-                        android:textColorHint="@color/light_grey_t"
-                        android:maxLines="2"
-                        android:background="@null"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/edit_text_background"
-                    android:visibility="gone"
-                    android:animateLayoutChanges="true">
-
-                    <LinearLayout
-                        android:id="@+id/ll_price"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/tv_price_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:text="" />
-
-                        <TextView
-                            android:id="@+id/tv_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:text=""
-                            android:textStyle="bold"/>
-                    </LinearLayout>
-
-                </RelativeLayout>
+                </LinearLayout>
 
             </LinearLayout>
         </FrameLayout>
